fixed the uneven button problem for desktop view

--- a/styles/home.css
+++ b/styles/home.css
@@ -193,7 +193,7 @@
 .course-button {
   width: 22.1vw;
   max-width: 165px;
-  height: clamp(20px, 5.13vw, 38px);
+  height: clamp(40px, 5.13vw, 80px);
 
   display: flex;
   align-items: center;
@@ -204,7 +204,6 @@
   color: #fff;
   text-decoration: none;
 }
-
 @media (min-width: 1200px) {
   .courses-section {
     min-height: 1725px;
@@ -235,7 +234,8 @@
   }
 
   .course-card {
-    width: px;
+    width: 529px;
+    height: 447px;
   }
 
   .course-image {
@@ -247,11 +247,15 @@
 
   .course-info {
     width: 406px;
-    min-height: 201px;
-    margin-top: -45px;
+    min-height: auto;
     padding: 26px 29px;
     border-radius: 40px;
     border: 2px solid #3c3c3c;
+
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
   }
 
   .course-info h3 {
@@ -264,7 +268,7 @@
 
   .course-button {
     width: 165px;
-    height: 38px;
+    height: 50px;
     border-radius: 40px;
   }
 
